--- a/src/Unit.css
+++ b/src/Unit.css
@@ -1,16 +1,13 @@
-.Unit p {
+.Unit .Farenheit,
+.Unit .Celcius,
+.Unit a {
   color: white;
+  font-size: 12px;
 }
 
-.Unit .Celcius {
-  color: #808fe6;
+.Unit .col {
+  width: 100px !important;
 }
-.Unit .Farenheit:hover,
-.Unit .Celcius:hover {
-  text-decoration: underline;
-  cursor: pointer;
-}
-
 .Unit {
   height: 60px;
 }
